# PingPong

./: BUILD.bazel  README.md  WORKSPACE  build.gradle  data.txt  pom.xml  settings.gradle
src/main/java/com/PingPong/lab1/: Lab1Application.java
src/main/java/com/PingPong/lab1/component/: onStartRunner.java
src/main/java/com/PingPong/lab1/configuration/: NoCacheResponseConfiguration.java  WebConfig.java
src/main/java/com/PingPong/lab1/controller/: TestingController.java
src/main/java/com/PingPong/lab1/entity/: Profile.java
src/main/java/com/PingPong/lab1/service/: PingPongService.java
src/main/java/com/PingPong/lab1/utils/: JsonParser.java  SingletonInstance.java
src/main/java/io/grpc/examples/helloworld/: HelloWorldClient.java
src/main/java/io/grpc/examples/helloworld/utils/: SingletonInstance.java
src/main/java/io/grpc/leaderless/: BenchmarkClient.java  Client.java  Coordinator.java  DBServer.java
src/main/java/io/grpc/leaderless/utils/: SingletonInstance.java
src/main/proto/: database.proto
src/main/proto/grpc/leaderless/echo/: echo.proto
src/main/resources/: application.properties
src/test/java/com/PingPong/lab1/: Lab1ApplicationTests.java
