load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_grpc_grpc_java//:java_grpc_library.bzl", "java_grpc_library")

proto_library(
    name = "database_proto",
    srcs = ["src/main/proto/database.proto"],
)

java_proto_library(
    name = "database_java_proto",
    deps = [":database_proto"],
)

java_grpc_library(
    name = "database_java_grpc",
    srcs = [":database_proto"],
    deps = [":database_java_proto"],
)

proto_library(
    name = "route_guide_proto",
    srcs = ["src/main/proto/route_guide.proto"],
)

java_proto_library(
    name = "route_guide_java_proto",
    deps = [":route_guide_proto"],
)

java_grpc_library(
    name = "route_guide_java_grpc",
    srcs = [":route_guide_proto"],
    deps = [":route_guide_java_proto"],
)

proto_library(
    name = "echo_proto",
    srcs = ["src/main/proto/grpc/leaderless/echo/echo.proto"],
)

java_proto_library(
    name = "echo_java_proto",
    deps = [":echo_proto"],
)

java_grpc_library(
    name = "echo_java_grpc",
    srcs = [":echo_proto"],
    deps = [":echo_java_proto"],
)

java_library(
    name = "leaderless",
    testonly = 1,
    srcs = glob(
        ["src/main/java/**/*.java"],
    ),
    resources = glob(
        ["src/main/resources/**"],
    ),
    runtime_deps = [
        "@io_grpc_grpc_java//netty",
    ],
    deps = [
        ":_health_java_grpc",
        ":echo_java_grpc",
        ":echo_java_proto",
        ":hello_streaming_java_grpc",
        ":hello_streaming_java_proto",
        ":helloworld_java_grpc",
        ":helloworld_java_proto",
        ":route_guide_java_grpc",
        ":route_guide_java_proto",
        "@com_google_protobuf//:protobuf_java",
        "@com_google_protobuf//:protobuf_java_util",
        "@io_grpc_grpc_java//api",
        "@io_grpc_grpc_java//context",
        "@io_grpc_grpc_java//protobuf",
        "@io_grpc_grpc_java//services:health",
        "@io_grpc_grpc_java//services:healthlb",
        "@io_grpc_grpc_java//stub",
        "@io_grpc_grpc_proto//:health_proto",
        "@io_grpc_grpc_proto//:health_java_proto",
        "@maven//:com_google_api_grpc_proto_google_common_protos",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_code_gson_gson",
        "@maven//:com_google_guava_guava",
    ],
)

java_binary(
    name = "db-server",
    testonly = 1,
    main_class = "io.grpc.leaderless.DBServer",
    runtime_deps = [
        ":leaderless",
    ],
)

java_grpc_library(
    name = "_health_java_grpc",
    srcs = ["@io_grpc_grpc_proto//:health_proto"],
    visibility = ["//visibility:private"],
    deps = ["@io_grpc_grpc_proto//:health_java_proto"],
)

